YAML github + overflow fix for pre tag

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -7,4 +7,5 @@ pre {
     @include border-radius(5px);
     padding: 10px;
     margin: 5px;
+    overflow: auto;
 }
